# scp

./: .gitmodules  CMakeLists.txt
lib/piu/: .clang-format  CMakeLists.txt  README.md
lib/piu/include/piu/: PIUSocket.h
lib/piu/src/: PIUSocket.c
lib/piu/src/internal/: PIUBuff.c  PIUBuff.h  PIUPacket.c  PIUPacket.h  log.h
lib/piu/test/: CMakeLists.txt  main.c
lib/piu/test/modules/: loss_test.c  loss_test.h
lib/stb/: CMakeLists.txt
src/: main.c  player.c  scp.c  sdl.c
